# S3E

./: .gitignore  download_bge.py
BOOL-SSE-CODE/: 依赖.docx
BOOL-SSE-CODE/.claude/: settings.local.json
CASE-SSE-CODE/: case_eval.py  case_sse_system.py  secure_index.py
CrypTen/CrypTen-main/docs/: make.bat
LLM-RAG-CODE/: rag_enron.py  rag_ms.py  rag_wiki.py  vary_k.py
SIMPLE-PIR-CODE/: README.md  requirements.txt  setup.py
SIMPLE-PIR-CODE/.claude/: settings.local.json
SIMPLE-PIR-CODE/examples/: __init__.py  basic_usage.py  benchmark_pir_datasets.py
SIMPLE-PIR-CODE/simple_pir/: __init__.py
SIMPLE-PIR-CODE/simple_pir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SIMPLE-PIR-CODE/simple_pir/config/: __init__.py  pir_config.py
SIMPLE-PIR-CODE/simple_pir/core/: __init__.py  pir_client.py  pir_protocol.py  pir_server.py
SIMPLE-PIR-CODE/tests/: __init__.py  test_core.py  test_integration.py
mycode/: build_index.py  change_k.py  change_k_eval.py  diagnose_alignmentdiagnose_alignment.py  evaluate.py  generate_trapdoor.py  index_share_k.py  mycode依赖.docx  preprocess_index_shares.py  preprocess_vectors.py  protocols_stub.py  requirements.txt  secure_search.py  utils.py
mycode/rabbit-mpc-comparisons/: Cargo.toml
mycode/rabbit-mpc-comparisons/src/: fastfield.rs  gates.rs
pir-rag/: extract_ms_marco_first10k.py  offline_build.py  online_eval.py  结果.docx
rabbit-mpc-comparisons/: Cargo.toml  README.md  build_with_maturin.bat
rabbit-mpc-comparisons/src/: comparisons.rs  lib.rs  main.rs
(+20709 files in other folders)
