[package]
name = "rabbit-mpc-comparisons"
version = "0.1.0"
edition = "2021"

# 允许同时生成二进制（main）和库（cdylib）
[lib]
name = "rabbit"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1"
debug_print = "1.0.0"
fast-math = "0.1.1"
num = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }

# PyO3 配置：用于生成 Python 绑定
pyo3 = { version = "0.21", features = ["extension-module"] }

[profile.release]
lto = true

