[package]
name = "rabbit-mpc-comparisons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
debug_print = "1.0.0"
fast-math = "0.1.1"
num = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
